# SimpleML

./: .env_template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
