[tool.poetry]
name = "simpleml"
version = "0.1.0"
description = "Template for base ML"
authors = ["Alexander <as.frantsev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
python-dotenv = "^1.0.1"
joblib = "^1.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.2.0"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
torch = "^2.2.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
